<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical">

        <EditText
            android:id="@+id/addr_input"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="332dp"
            android:layout_height="23dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/custom_input"
            android:backgroundTint="#0F0"
            android:fontFamily="sans-serif-light"
            android:hint="@string/ipv4_6_address"
            android:maxLength="39"
            android:singleLine="true"
            android:textColor="#000"
            android:textColorHint="#000"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/used_time"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="86dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/latency"
            android:textColor="#0F0"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/copyIP"
            android:layout_width="68dp"
            android:layout_height="30dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="79dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/checkbox"
            android:textColor="#0F0"
            android:textSize="14sp"
            android:buttonTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="247dp"
            android:layout_marginTop="70dp"
            android:backgroundTint="#808080"
            android:text="@string/check_ip"
            android:textAllCaps="false"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/ipaddr_label"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="130dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/ip_address"
            android:textColor="#0F0"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/hostname_label"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="175dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/hostname"
            android:textColor="#0F0"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/orga_label"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="220dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/organisation"
            android:textColor="#0F0"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/longlat_label"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="310dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/long_latitude"
            android:textAllCaps="false"
            android:textColor="#0F0"
            android:textColorLink="#00FF00"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/location_label"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="265dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/location"
            android:textColor="#0F0"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="256dp"
            android:layout_marginTop="355dp"
            android:backgroundTint="#2196F3"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/error_ipinfo_label"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="440dp"
            android:textColor="#F00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/info_appVersion"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/app_version"
            android:textAlignment="center"
            android:textColor="#0F0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.890" />

        <Button
            android:id="@+id/btn_startPauseMusic"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="#FF1100"
            android:text="@string/play_music"
            android:textAllCaps="false"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.984" />

        <ImageView
            android:id="@+id/img_github"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="152dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.978"
            app:srcCompat="@drawable/githubwhite"
            tools:srcCompat="@drawable/githubwhite" />

        <Button
            android:id="@+id/btn_fileWriter"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="234dp"
            android:backgroundTint="#808080"
            android:text="@string/filewriter"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.977" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>